tests/syntax/src/types/array-dict.tea

#main

// dots style
var str_dict_list List<Dict<String>> = [['a': 'abc', 'b': '123.1']]
unset str_dict_list[0]['a']

var int_dict Dict<Int> = [:]

// [] [:] style
var str_list String[] = []
var float_dict_array Float[:][] = []


str_list[] = 'str'  // okay
// str_list[] = Exception('message')  // error

// int_dict['k1'] = '123' // error
int_dict['k2'] = -123   // okay

float_dict_array[] = ['abc': 123.12]   // okay
// float_dict_array[] = ['abc': 'ddd']   // error

// auto style
arr = [] // List<Any>
arr.push([1, 2, 3])
arr.push("hello")

echo arr.pop()

arr1 = [1, 2, 3]
arr2 = [4, 5, 6]
arr3 = arr1 .+ arr2

var dict = [:]
dict[(string) 1.1] = 1

var_dump(dict)

var key = 1
var key1 Any = 1
var key2 = 1.1
var key3 = false

dict1 = [
	key: "abc", // some comments
	(string) key1: "abc", // some comments
	(string) key3: "abc", // some comments
	"k1": "v1", /* some comments */
]

dict2 = [
	(string) key2: "abc", /* some comments
	 */
	"k1": "v1", // some comments
]

for key, val in dict1 {
	echo <span>${key}: ${val}</span>
}

var users = [
	["id": 1, "name": "name1"],
	["id": 2, "name": "name2"],
	["id": 3, "name": "name3"],
]

var id2name = [:]
for user in users {
	id2name[(string) user['id']] = user['name']
}

// array map
var mapped = users.map((item) => {
	return '${item['id']} - ${item['name']}'
})
var_dump(mapped)

// array reduce
var reduced = [1, 2, 3].reduce((carry Int, item Int) => {
	return carry + item
}, 10)
var_dump(reduced)

// array filter
var filtered = [0, 1, 2, 3, 4, 5].filter((item) => {
	if (int) item % 2 == 0 {
		return true
	}
})

var_dump(filtered)
